tests/rosetta/transpiler/CPP/death-star.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:20:181: warning: multi-character character constant [-Wmultichar]
   20 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:21:209: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:21:295: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:22:189: warning: multi-character character constant [-Wmultichar]
   22 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:23:183: warning: multi-character character constant [-Wmultichar]
   23 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:24:215: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:24:251: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:147:17: error: no match for ‘operator!’ (operand type is ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  147 |             if (!hb["hit"]) {
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:147:17: note: candidate: ‘operator!(bool)’ (built-in)
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:147:17: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:156:17: error: no match for ‘operator!’ (operand type is ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  156 |             if (!hs["hit"]) {
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:156:17: note: candidate: ‘operator!(bool)’ (built-in)
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:156:17: note:   no known conversion for argument 1 from ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to ‘bool’
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:158:37: error: invalid cast from type ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to type ‘double’
  158 |             } else             if (((double)(hs["z1"]) > (double)(zb1))) {
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:158:58: error: invalid cast from type ‘std::any’ to type ‘double’
  158 |             } else             if (((double)(hs["z1"]) > (double)(zb1))) {
      |                                                          ^~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:160:37: error: invalid cast from type ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to type ‘double’
  160 |             } else             if (((double)(hs["z2"]) > (double)(zb2))) {
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:160:58: error: invalid cast from type ‘std::any’ to type ‘double’
  160 |             } else             if (((double)(hs["z2"]) > (double)(zb2))) {
      |                                                          ^~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:162:37: error: invalid cast from type ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’} to type ‘double’
  162 |             } else             if (((double)(hs["z2"]) > (double)(zb1))) {
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:162:58: error: invalid cast from type ‘std::any’ to type ‘double’
  162 |             } else             if (((double)(hs["z2"]) > (double)(zb1))) {
      |                                                          ^~~~~~~~~~~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:177:74: error: no match for ‘operator-’ (operand types are ‘std::any’ and ‘double’)
  177 |                 vec = V3{.x = (x - pos.cx), .y = (y - pos.cy), .z = (zb1 - pos.cz)};
      |                                                                      ~~~ ^ ~~~~~~
      |                                                                      |         |
      |                                                                      std::any  double
In file included from /usr/include/c++/13/string:48,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:2:
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_IteratorL>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:177:80: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_IteratorL>’
  177 |                 vec = V3{.x = (x - pos.cx), .y = (y - pos.cy), .z = (zb1 - pos.cz)};
      |                                                                                ^~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:177:80: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  177 |                 vec = V3{.x = (x - pos.cx), .y = (y - pos.cy), .z = (zb1 - pos.cz)};
      |                                                                                ^~
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:179:77: error: no match for ‘operator-’ (operand types are ‘double’ and ‘std::map<std::__cxx11::basic_string<char>, std::any>::mapped_type’ {aka ‘std::any’})
  179 |                 vec = V3{.x = (neg.cx - x), .y = (neg.cy - y), .z = (neg.cz - hs["z2"])};
/usr/include/c++/13/bits/stl_iterator.h:625:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__y.base() - __x.base())) std::operator-(const reverse_iterator<_IteratorL>&, const reverse_iterator<_IteratorR>&)’
  625 |     operator-(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:625:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:179:86: note:   mismatched types ‘const std::reverse_iterator<_IteratorL>’ and ‘double’
  179 |                 vec = V3{.x = (neg.cx - x), .y = (neg.cy - y), .z = (neg.cz - hs["z2"])};
      |                                                                                      ^
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr decltype ((__x.base() - __y.base())) std::operator-(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1800 |     operator-(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1800:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/rosetta/transpiler/CPP/death-star.cpp:179:86: note:   mismatched types ‘const std::move_iterator<_IteratorL>’ and ‘double’
  179 |                 vec = V3{.x = (neg.cx - x), .y = (neg.cy - y), .z = (neg.cz - hs["z2"])};
      |                                                                                      ^
